--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,8 +7,30 @@
         "stylelint-csstree-validator"
     ],
     "rules": {
-        "at-rule-no-unknown": null,
-        "scss/at-rule-no-unknown": true,
+        "at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": [
+                    "tailwind",
+                    "apply",
+                    "variants",
+                    "responsive",
+                    "screen"
+                ]
+            }
+        ],
+        "scss/at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": [
+                    "tailwind",
+                    "apply",
+                    "variants",
+                    "responsive",
+                    "screen"
+                ]
+            }
+        ],
         "csstree/validator": true
     },
     "ignoreFiles": [
